fixed size issues, need to check validation tests

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <header>
         <img alt="logo" src="images/logo1x.png">
         <h1>Your Favorite Band</h1>
-        <h2>We Will Rock You</h2>
             <nav>
                 <button id="hamburgerBtn">&#9776;</button>
                 <ul id="primaryNav">
@@ -48,7 +47,7 @@
     <main>
         <!--Start Members Section-->
         <h1>Members</h1>
-        <scetion class="members">
+        <section class="members">
             <article>
                 <h2>Dan Drummer</h2>
                 <figure class="round">
@@ -90,7 +89,6 @@
                 <figure class="play">
                     <img src="images/melanie-van-leeuwen-QA-qQfWJM0E-unsplash.jpg" alt="bill">
                 </figure>
-                <img>
                 <p>Lorem ipsum dolor sit amet consectetur
                 adipisicing elit. Necessitatibus iusto distinctio
                 perspiciatis, iste culpa, sit cum facere laudantium
@@ -98,13 +96,13 @@
                 perferendis blanditiis. Impedit veritatis beatae unde!</p>
             </article>
 
-        </scetion>
+        </section>
 
 
 
         <!--End members section-->
 
-        <!-- Start Performances-->
+        <!-- Start Lazy Load Performances-->
         <section class="bandGallery">
             <h1>Performances</h1>
 
